--- a/pea-commons/pom.xml
+++ b/pea-commons/pom.xml
@@ -121,6 +121,12 @@
 		    <artifactId>commons-lang3</artifactId>
 		    <version>3.0</version>
 		</dependency>
+		<dependency>
+			<groupId>io.github.benas</groupId>
+			<artifactId>jpopulator</artifactId>
+			<version>1.2.0</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 		
 </project>
