--- a/pea-backend-app/WebContent/WEB-INF/web.xml
+++ b/pea-backend-app/WebContent/WEB-INF/web.xml
@@ -4,9 +4,18 @@
     version="3.0">
     <display-name>Spring Web MVC Application</display-name>
 
+	<context-param>
+	    <param-name>contextConfigLocation</param-name>
+	    <param-value>/WEB-INF/application-config.xml</param-value>
+	</context-param>
+	
 	<servlet>
 		<servlet-name>peruvianit</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+	        <param-name>contextConfigLocation</param-name>
+	        <param-value>/WEB-INF/peruvianit-servlet.xml</param-value>
+	    </init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
@@ -15,10 +24,10 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
-	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/peruvianit-servlet.xml</param-value>
-	</context-param>
+<!-- 	<context-param> -->
+<!-- 		<param-name>contextConfigLocation</param-name> -->
+<!-- 		<param-value>/WEB-INF/peruvianit-servlet.xml</param-value> -->
+<!-- 	</context-param> -->
 
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
