--- a/pea-backend-app/pom.xml
+++ b/pea-backend-app/pom.xml
@@ -52,7 +52,11 @@
    		</dependency>
    		
    		<!-- Spring -->
-   		
+   		<dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>4.3.1.RELEASE</version>
+        </dependency>
    		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
@@ -73,12 +77,10 @@
 			<artifactId>spring-web</artifactId>
 			<version>4.3.1.RELEASE</version>
 		</dependency>
- 
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
    </dependencies>
-
 </project>
